Fix text-overflow in menu

--- a/project/src/styl/menu.styl
+++ b/project/src/styl/menu.styl
@@ -43,7 +43,6 @@
       text-align left
       width 45%
       padding 5px 0
-      overflow hidden
       line-height 1.2em
       &:nth-child(even)
         margin-left 10%
@@ -68,6 +67,7 @@
         & > .nb
           opacity 0.4
       & > .name
+        display block
         color #C4A86F
         white-space nowrap
         overflow hidden
